# replit-vocode-telegram-app

./: .env.example  .gitignore  .replit  README.md  config.nix  environment.docker.yml  main.py  pyproject.toml  replit.nix  test_azure_speech.py
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-23.3.1-py3-none-any/pip-23.3.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-69.0.2-py3-none-any/setuptools-69.0.2.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.42.0-py3-none-any/wheel-0.42.0.dist-info/: RECORD
assets/video/: script.md
knowledge_base/: coqui.md
test/: test_azure_speech.py
