[tool.poetry]
name = "vocode-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
vocode = { git = "https://github.com/ArtisanLabs/vocode-python.git", branch = "486-support-for-pydantic-v2-v1-compatible" }
pydub = "^0.25.1"
replit = "^3.5.0"
google-cloud-texttospeech = "^2.15.1"
pydantic = "^2"
python-telegram-bot = "20.8"
black = "^24.2.0"
ipython = "^8.21.0"
azure-cognitiveservices-speech = "^1.35.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
